--- a/random.html
+++ b/random.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="#bottom">Back to Bottom</a>
    <nav>
     <ul>
         <li ><a href="index.html">Home</a></li>
@@ -37,8 +38,7 @@
             <li> It isn't as bad as VBA!</li>
         </ul>
     </ol>    
-
-    <p>Here is something that has made me laugh in the past three hours.</p>
+    <a id="bottom">Here is something that has made me laugh in the past three hours.</a>
    
   <iframe width="333" height="592" src="https://www.youtube.com/embed/21jLmc_Il3o" title="More like hurricane tortilla VINE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
